@@ -42,8 +42,9 @@ After reading print the options to standard output in configfile format.
 Without this option, only success or parse errors are reported.
 
 .It Fl o Ar option
-Return only this option from the config file. This option needs
+Return only this option from the config file. This option can
 to be used in conjunction with the \fI\-z\fR option.
+The special value \fIzones\fR prints out a list of configured zones.
 .Pp
 This option
 is primarily used by nsdc to parse the config file from the shell.
