@@ -1,39 +1,0 @@
-#!/bin/sh
-#
-# nsdc.conf.sample -- configuration for nsdc.sh
-#
-# Copyright (c) 2001-2006, NLnet Labs. All rights reserved.
-#
-# See LICENSE for the license.
-#
-#
-
-# Pathname to the directory containing zone file. De facto NSD ``home''
-configdir="@configdir@"
-
-# The directory where NSD binaries reside
-sbindir="@sbindir@"
-
-# Flags to pass to nsd on startup
-flags=""
-
-# Pathname of the database
-dbfile="@dbfile@"
-
-# List of the configured zones
-zonesfile="@zonesfile@"
-
-# The directory containing NSD keys
-keysdir="@configdir@/keys"
-
-# Pathname of nsd-notify binary
-notify="@sbindir@/nsd-notify"
-
-# Pathname of nsd-xfer binary
-nsdxfer="@sbindir@/nsd-xfer"
-
-# Flags to nsd-xfer. To set the socket's source address, use: "-a hostname" or "-a ip"
-nsdxfer_flags=""
-
-# Verbosity of "nsdc update". Set ZONEC_VERBOSE to -v, -vv or to a
-# null string ZONEC_VERBOSE=-v
