@@ -1,6 +1,9 @@
 26 June 2006: Wouter
 	- Nicer check in autoconf for struct timespec type.
 	- NSEC3 next hashed ownername is a length byte followed by data.
+	- nsd-checkconf more quiet, clearer error message.
+	- NSEC3 does not complain about glue records without nsec3.
+	- nsdc work (did start, stop, running, rebuild, restart, reload, stats).
 
 21 June 2006: Wouter
 	- nsid commandline parsed using hex_pton routine.
